--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ body {
     
 }
 
-.verify-input {
+.inputb {
     display: grid;
     justify-items: center;
     border-radius: 20px;
@@ -108,7 +108,7 @@ body {
     grid-column: 1;
 }
 #verify {
-    width: 20px;
+    display: grid;
     padding-right: 150px ;
     font-size: 16px;
     border: 0px;
@@ -120,12 +120,36 @@ body {
     
 }
 
+#lookup {
+    
+    display: grid;
+    padding-right: 150px ;
+    font-size: 16px;
+    border: 0px;
+    font-family: sans-serif;
+    background-color: #fff;
+    color: #7F7F7F;
+    grid-column: 2;
+}
+
+#contains {
+    
+    display: grid;
+    padding-right: 150px ;
+    font-size: 16px;
+    border: 0px;
+    font-family: sans-serif;
+    background-color: #fff;
+    color: #7F7F7F;
+    grid-column: 2;
+}
+
 .results-verify {
     display: grid;
     grid-template-columns: 1fr 30px;
-    grid-template-rows: 2;
+    grid-template-rows: 3;
     justify-items: center;
-    width: 100%;
+    width: 100%; 
     height: 100%;
     font-size: 12px;
     padding-top: 30px;
@@ -150,6 +174,6 @@ body {
     background-color: #fff;
     color: #555;
     grid-column: 2;
-    grid-row:2;
+    grid-row:3;
 
 }
