--- a/style.css
+++ b/style.css
@@ -106,8 +106,9 @@ body {
     border: .5px solid rgb(124, 124, 124);
     height: 30px;
     grid-column: 1;
+    margin-top: 5px;
 }
-#verify {
+#verify, #lookup, #add, #contains, #update, #delete  {
     display: grid;
     padding-right: 150px ;
     font-size: 16px;
@@ -120,29 +121,6 @@ body {
     
 }
 
-#lookup {
-    
-    display: grid;
-    padding-right: 150px ;
-    font-size: 16px;
-    border: 0px;
-    font-family: sans-serif;
-    background-color: #fff;
-    color: #7F7F7F;
-    grid-column: 2;
-}
-
-#contains {
-    
-    display: grid;
-    padding-right: 150px ;
-    font-size: 16px;
-    border: 0px;
-    font-family: sans-serif;
-    background-color: #fff;
-    color: #7F7F7F;
-    grid-column: 2;
-}
 
 .results-verify {
     display: grid;
@@ -173,7 +151,7 @@ body {
     font-weight: bold;
     background-color: #fff;
     color: #555;
-    grid-column: 2;
+    grid-column: 1/4;
     grid-row:3;
 
 }
