--- a/style.css
+++ b/style.css
@@ -107,6 +107,7 @@ body {
     height: 30px;
     grid-column: 1;
     margin-top: 5px;
+    padding-left: 8px;
 }
 #verify, #lookup, #add, #contains, #update, #delete  {
     display: grid;
